--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,16 @@
-<div class="box" id="heading">
-    <h1>{{ titulo }}</h1>
-</div>
+<div *ngIf="!isAutenticado()" class="box centrado" >
+    <a routerLink="/login">Login</a>
+  </div>
+  <div *ngIf="isAutenticado()" class="box centrado" >    
+      <a style="cursor:pointer" (click)="salir()">Salir</a> 
+  </div> 
+    
+  <div class="box" id="heading">
+    <h1>Listado de Personas</h1>
+  </div> 
+  <router-outlet></router-outlet>
+  
 
-<router-outlet></router-outlet>
+
 
 
