--- a/src/app/personas/formulario/formulario.component.html
+++ b/src/app/personas/formulario/formulario.component.html
@@ -1,28 +1,19 @@
 <div class="box">
+  <form class="item" #f="ngForm" (ngSubmit)="f.form.valid && onGuardarPersona()">
 
-<form (ngSubmit)="f.form.valid && onGuardarPersona()" #f="ngForm" class="item">
-      <input type="text" 
-      name="nombre" 
-      id="nombre" 
-      placeholder="Nombre"
-      [(ngModel)]="nombreInput"
-      required
-      >
+    <input type="text" 
+            name="nombre" 
+            placeholder="Nombre" 
+            [(ngModel)]="nombreInput" required/>
+    
+    <input type="text" 
+          name="apellido" 
+          placeholder="Apellido" 
+          [(ngModel)]="apellidoInput" required/>
+    
+    <button type="submit" style="cursor: pointer">+</button>
 
-      <input type="text" 
-      name="apellido" 
-      id="apellido" 
-      placeholder="Apellido"
-       [(ngModel)]="apellidoInput"
-       required
-       >
-       
-      <button 
-      type="submit" style="cursor: pointer">
-      +
-      </button>
-      <button *ngIf="index !=null" type="submit" style="cursor: pointer"
-      class="buttonRed"
-      (click)="eliminarPersona()">-</button>
+    <button *ngIf="index != null" type="submit" style="cursor: pointer" class="buttonRed" (click)="onEliminarPersona()">-</button>
   </form>
 </div>
+
