--- a/src/app/personas/personas.component.html
+++ b/src/app/personas/personas.component.html
@@ -1,17 +1,15 @@
-<div style="text-align: center;">
-  <button style="cursor: pointer" (click)="agregar()">+</button>
+<div style="text-align: center">
+  <button style="cursor: pointer" (click)="irAgregar()">+</button>
 </div>
 
 <div class="box">
-    <app-persona
-      *ngFor="let personaElemento of personas; let i = index"
-      [persona]="personaElemento"
-      [indice]="i"
-    >
-    </app-persona>
-  </div>
-  
-  <div class="box">
-    <hr />
-    <app-formulario></app-formulario>
-  </div>
+  <app-persona 
+    *ngFor="let personaElemento of personas; let i = index" 
+    [persona]="personaElemento" 
+    [indice]="i"
+  ></app-persona>
+</div>
+
+
+<router-outlet></router-outlet>
+
